<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mainbg"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/mainbg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/drawable_dialog_bg"

        >

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="144dp"
            android:orientation="vertical"
            android:paddingTop="25dp">

            <com.reyansh.audio.audioplayer.free.Views.TextViewPlus
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="center"
                android:text="@string/beatsplayer"
                android:textAppearance="?android:textAppearanceLarge"
                android:textColor="@color/white" />

            <com.reyansh.audio.audioplayer.free.Views.TextViewPlus
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="center"
                android:text="@string/version"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@color/white" />

            <com.reyansh.audio.audioplayer.free.Views.TextViewPlus
                style="?android:listSeparatorTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="center"
                android:text="@string/beta"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@color/BurlyWood" />
        </LinearLayout>

        <Button
            android:id="@+id/whatsnew"
            style="?android:listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/linearLayout9"
            android:layout_gravity="center_vertical"
            android:layout_marginBottom="45dp"
            android:visibility="invisible"
            android:elevation="5dp"
            android:gravity="center"
            android:text="@string/whatsnew"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@color/white" />

        <LinearLayout
            android:id="@+id/linearLayout9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="10dp"
            android:orientation="vertical">

            <com.reyansh.audio.audioplayer.free.Views.TextViewPlus
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="center"
                android:text="@string/developer"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="@color/white" />

            <com.reyansh.audio.audioplayer.free.Views.TextViewPlus
                android:id="@+id/rateus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="center"
                android:text="@string/rateus"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="@color/BurlyWood" />
        </LinearLayout>

        <ImageView
            android:layout_width="170dp"
            android:layout_height="170dp"
            android:layout_above="@+id/linearLayout3"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="41dp"
            android:background="@drawable/main_ic" />
    </RelativeLayout>
</RelativeLayout>