<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/sortlayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginBottom="150dp"
    android:layout_marginLeft="25dp"
    android:layout_marginRight="25dp"
    android:layout_marginTop="150dp"
    android:background="@drawable/drawable_dialog_bg"
    android:orientation="vertical"
    android:padding="4dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/drawable_dialog_bg">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/dailogbg"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/drawable_dialog_bg"
                android:orientation="vertical">

                <com.reyansh.audio.audioplayer.free.Views.TextViewPlus
                    android:layout_width="fill_parent"
                    android:layout_height="45dp"
                    android:gravity="center"
                    android:paddingTop="10dp"
                    android:singleLine="true"
                    android:text="@string/RateApp"
                    android:textColor="@color/white"
                    android:textSize="26.0sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginBottom="10dp"
                    android:background="@color/white" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="left"
                    android:layout_weight="15.0"
                    android:gravity="left"
                    android:orientation="vertical">


                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:src="@drawable/main_ic" />

                    <com.reyansh.audio.audioplayer.free.Views.TextViewPlus
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="left"
                        android:paddingLeft="10dp"
                        android:text="@string/rateuse"
                        android:textColor="@color/white"
                        android:textSize="15sp" />


                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@color/white" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center">

                        <Button
                            android:id="@+id/ratenow"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@drawable/settingselector"
                            android:text="@string/ratenow"
                            android:textColor="@color/white" />

                    </LinearLayout>

                    <View
                        android:layout_width="0.5dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:background="@color/white" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@null">

                        <Button
                            android:id="@+id/remindmelater"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@drawable/settingselector"
                            android:singleLine="true"
                            android:text="@string/remindmelater"
                            android:textColor="@color/white" />
                    </LinearLayout>

                    <View
                        android:layout_width="0.5dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:background="@color/white" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@null">

                        <Button
                            android:id="@+id/nothanks"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@drawable/settingselector"
                            android:text="@string/nothanks"
                            android:textColor="@color/white" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>